--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 #container {
-    height:100%;
+    height: 100%;
     overflow: visible;
     background-color: #3E68CC;
-    color:#111111;
+    color: #111111;
 }
 .column {
     display: inline-block;
@@ -17,7 +17,7 @@
     border-radius: 50%;
 }
 .column .content {
-    margin:30px;
+    margin: 30px;
     font-family: bree serif;
     font-size: 20px;
 }
@@ -32,17 +32,27 @@
 }
 #work-column {
     background-color: #E82727;
-    width:49%;
+    width: 49%;
 }
 #it-column {
     background-color: #3E68CC;
     width: 25%;
     z-index: -20;
 }
-.column:not(.selected){
-    -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -ms-filter: blur(2px);
-    -o-filter: blur(2px);
-    filter: blur(2px); 
+
+@media screen and (min-width: 1000px) {
+    .column:not(.selected) {
+        -webkit-filter: blur(2px);
+        -moz-filter: blur(2px);
+        -ms-filter: blur(2px);
+        -o-filter: blur(2px);
+        filter: blur(2px);
+    }
+}
+@media screen and (max-width: 1000px) {
+    .column {
+        height:auto;
+        width:100% !important;
+        display:block;
+    }
 }
