--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ html, body {
 #container {
     height: 100%;
     overflow: visible;
-    background-color: #3E68CC;
+    background-color: #324654;
     color: #111111;
 }
 .column {
